Opened 7 months ago
Closed 6 months ago
#18951 closed bug (fixed)
SFTP Causes KDL
Reported by: | mbrumbelow | Owned by: | waddlesplash |
---|---|---|---|
Priority: | high | Milestone: | R1/beta5 |
Component: | System/Kernel | Version: | R1/beta4 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | x86-64 |
Description
Version: hrev57843
CPU: 8 Processors - AMD Ryzen 7 4700U @ 2.00 Ghz
Memory: 8096 MiB Memory - 484 MiB used (%6)
Executing sftp in shell. The system is running in a VM (KVM/QEMU).
See attached...
Attachments (1)
Change History (6)
by , 7 months ago
Attachment: | Screenshot from 2024-07-18 21-14-05.png added |
---|
comment:1 by , 7 months ago
Milestone: | Unscheduled → R1/beta5 |
---|---|
Owner: | changed from | to
Status: | new → assigned |
Looks like the SyscallRestartWrapper isn't initialized early enough.
comment:2 by , 7 months ago
Resolution: | → fixed |
---|---|
Status: | assigned → closed |
Fixed in hrev57855. Thanks for testing & reporting!
comment:3 by , 6 months ago
I found two problems after the fix:
- MediaPlayer and VLC cannot play some video files which can be played in hrev57843. In order to reproduce this bug, you can create a simple video file with ffmpeg, based on one png file and an mp3 audio file with:
ffmpeg -r 1 -loop 1 -i question.png -i file.mp3 -acodec copy -r 1 -shortest -vf scale=1280:720 test.mp4
- Mednafen (games emulator) has now 1fps or something due to the same change. Tested with different cores like .gbc, .srm, .sfc and .nes roms.
Tested on ASUS laptop, x86_64, as native install (no quemu, vmware or virtualbox).
The code changes seems to have an impact on video players and emulator in the same time. I guess this bug should be reopened.
comment:4 by , 6 months ago
Resolution: | fixed |
---|---|
Status: | closed → reopened |
comment:5 by , 6 months ago
Resolution: | → fixed |
---|---|
Status: | reopened → closed |
Please open a separate ticket, since that is a completely different problem.
KDL Screenshot