kernel/fd: Create the SyscallRestartWrapper before calling common_vector_io.

Otherwise, it seems compiler will optimize the assign operation into
a call of the first constructor, meaning the thread's syscall flag
won't be set properly.

Fixes #18951.